# Confi

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: Lexer.hpp  Parser.hpp
src/: Confi.cpp  main.cpp
tests/: run.sh  test.confi
